FS#10249 by Teruaki Kawashima - "Gigabeat F/X: fix wrong key in "Set Time/Date" screen".  I was able to change most languages as they don't translate button names.  A few (~6) remain untranslated as they do translate the button names.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21223 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/bulgarian.lang
+++ b/apps/lang/bulgarian.lang
@@ -1353,7 +1353,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -1364,7 +1364,7 @@
     ipod*,c200,sa9200: "MENU за отказ"
     x5,m5: "RECORD за отказ"
     h10,h10_5gb,e200*: "PREV за отказ"
-    gigabeatf: "A за отказ"
+    gigabeatf: "POWER за отказ"
     mrobe100: "DISPLAY за отказ"
     gigabeats: "BACK за отказ"
   </dest>
