--- a/apps/lang/czech.lang
+++ b/apps/lang/czech.lang
@@ -4131,7 +4131,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4142,7 +4142,7 @@
     ipod*,c200,sa9200: "MENU = Vrátit zpět"
     x5,m5: "RECORD = Vrátit zpět"
     h10,h10_5gb,e200*: "PREV = Vrátit zpět"
-    gigabeatf: "A = Vrátit zpět"
+    gigabeatf: "POWER = Vrátit zpět"
     mrobe100: "DISPLAY = Vrátit zpět"
     gigabeats: "BACK = Vrátit zpět"
   </dest>
