--- a/apps/lang/deutsch.lang
+++ b/apps/lang/deutsch.lang
@@ -4171,7 +4171,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4182,7 +4182,7 @@
     ipod*,c200,sa9200: "MENU = Abbrechen"
     x5,m5: "RECORD = Abbrechen"
     h10,h10_5gb,e200*: "PREV = Abbrechen"
-    gigabeatf: "A = Abbrechen"
+    gigabeatf: "POWER = Abbrechen"
     mrobe100: "DISPLAY = Abbrechen"
     gigabeats: "BACK = Abbrechen"
   </dest>
