--- a/apps/lang/espanol.lang
+++ b/apps/lang/espanol.lang
@@ -2987,7 +2987,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -2998,7 +2998,7 @@
     ipod*,c200,sa9200: "MENU = Cancelar"
     x5,m5: "RECORD = Cancelar"
     h10,h10_5gb,e200*: "PREV = Cancelar"
-    gigabeatf: "A = Cancelar"
+    gigabeatf: "POWER = Cancelar"
     mrobe100: "DISPLAY = Cancelar"
     gigabeats: "BACK = Cancelar"
   </dest>
