--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -4197,7 +4197,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4208,7 +4208,7 @@
     ipod*,c200,sa9200: "MENU = Annuler"
     x5,m5: "RECORD = Annuler"
     h10,h10_5gb,e200*: "PREV = Annuler"
-    gigabeatf: "A = Annuler"
+    gigabeatf: "POWER = Annuler"
     mrobe100: "DISPLAY = Annuler"
     gigabeats: "BACK = Annuler"
   </dest>
