--- a/apps/lang/greek.lang
+++ b/apps/lang/greek.lang
@@ -4153,7 +4153,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4164,7 +4164,7 @@
     ipod*,c200,sa9200: "MENU = Ακύρωση"
     x5,m5: "RECORD = Ακύρωση"
     h10,h10_5gb,e200*: "PREV = Ακύρωση"
-    gigabeatf: "A = Ακύρωση"
+    gigabeatf: "POWER = Ακύρωση"
     mrobe100: "DISPLAY = Ακύρωση"
     gigabeats: "BACK = Ακύρωση"
   </dest>
