--- a/apps/lang/italiano.lang
+++ b/apps/lang/italiano.lang
@@ -4169,7 +4169,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4180,7 +4180,7 @@
     ipod*,c200,sa9200: "MENU = Annulla"
     x5,m5: "RECORD = Annulla"
     h10,h10_5gb,e200*: "PREV = Annulla"
-    gigabeatf: "A = Annulla"
+    gigabeatf: "POWER = Annulla"
     mrobe100: "DISPLAY = Annulla"
     gigabeats: "Indietro = Annulla"
   </dest>
