--- a/apps/lang/norsk.lang
+++ b/apps/lang/norsk.lang
@@ -3896,7 +3896,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -3907,7 +3907,7 @@
     ipod*,c200,sa9200: "MENU = Tilbakestill"
     x5,m5: "RECORD = Tilbakestill"
     h10,h10_5gb,e200*: "PREV = Tilbakestill"
-    gigabeatf: "A = Tilbakestill"
+    gigabeatf: "POWER = Tilbakestill"
     mrobe100: "DISPLAY = Tilbakestill"
     gigabeats: "BACK = Tilbakestill"
   </dest>
