--- a/apps/lang/walon.lang
+++ b/apps/lang/walon.lang
@@ -4172,7 +4172,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4183,7 +4183,7 @@
     ipod*,c200,sa9200: "MENU = Rinoncî"
     x5,m5: "RECORD = Rinoncî"
     h10,h10_5gb,e200*: "PREV = Rinoncî"
-    gigabeatf: "A = Rinoncî"
+    gigabeatf: "POWER = Rinoncî"
     mrobe100: "DISPLAY = Rinoncî"
     gigabeats: "BACK = Rinoncî"
   </dest>
