--- a/apps/lang/chinese-simp.lang
+++ b/apps/lang/chinese-simp.lang
@@ -4591,7 +4591,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4602,7 +4602,7 @@
     ipod*,c200,sa9200: "MENU=放弃"
     x5,m5: "RECORD=放弃"
     h10,h10_5gb,e200*: "PREV=放弃"
-    gigabeatf: "A=放弃"
+    gigabeatf: "POWER=放弃"
     mrobe100: "DISPLAY=放弃"
     gigabeats: "BACK=放弃"
   </dest>
