--- a/apps/lang/chinese-trad.lang
+++ b/apps/lang/chinese-trad.lang
@@ -4592,7 +4592,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4603,7 +4603,7 @@
     ipod*,c200,sa9200: "MENU = 回去"
     x5,m5: "RECORD = 回去"
     h10,h10_5gb,e200*: "PREV = 回去"
-    gigabeatf: "A = 回去"
+    gigabeatf: "POWER = 回去"
     mrobe100: "DISPLAY = 回去"
     gigabeats: "BACK = 回去"
   </dest>
