--- a/apps/lang/finnish.lang
+++ b/apps/lang/finnish.lang
@@ -4591,7 +4591,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4602,7 +4602,7 @@
     ipod*,c200,sa9200: "MENU = Peruuta"
     x5,m5: "RECORD = Peruuta"
     h10,h10_5gb,e200*: "PREV = Peruuta"
-    gigabeatf: "A = Peruuta"
+    gigabeatf: "POWER = Peruuta"
     mrobe100: "DISPLAY = Peruuta"
     gigabeats: "BACK = Peruuta"
   </dest>
