--- a/apps/lang/hebrew.lang
+++ b/apps/lang/hebrew.lang
@@ -4154,7 +4154,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4165,7 +4165,7 @@
     ipod*,c200,sa9200: "MENU = ביטול"
     x5,m5: "RECORD = ביטול"
     h10,h10_5gb,e200*: "PREV = ביטול"
-    gigabeatf: "A = ביטול"
+    gigabeatf: "POWER = ביטול"
     mrobe100: "DISPLAY = ביטול"
     gigabeats: "BACK = ביטול"
   </dest>
