--- a/apps/lang/japanese.lang
+++ b/apps/lang/japanese.lang
@@ -4173,7 +4173,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4184,7 +4184,7 @@
     ipod*,c200,sa9200: "MENU = 元に戻す"
     x5,m5: "RECORD = 元に戻す"
     h10,h10_5gb,e200*: "PREV = 元に戻す"
-    gigabeatf: "A = 元に戻す"
+    gigabeatf: "POWER = 元に戻す"
     mrobe100: "DISPLAY = 元に戻す"
     gigabeats: "BACK = 元に戻す"
   </dest>
