--- a/apps/lang/portugues-brasileiro.lang
+++ b/apps/lang/portugues-brasileiro.lang
@@ -4167,7 +4167,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4178,7 +4178,7 @@
     ipod*,c200,sa9200: "MENU = Reverter"
     x5,m5: "RECORD = Reverter"
     h10,h10_5gb,e200*: "PREV = Reverter"
-    gigabeatf: "A = Reverter"
+    gigabeatf: "POWER = Reverter"
     mrobe100: "DISPLAY = Reverter"
     gigabeats: "BACK = Reverter"
   </dest>
