--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -4156,7 +4156,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
  </source>
@@ -4167,7 +4167,7 @@
     ipod*,c200,sa9200: "MENU = Mabalik"
     x5,m5: "RECORD = Mabalik"
     h10,h10_5gb,e200*: "PREV = Mabalik"
-    gigabeatf: "A = Mabalik"
+    gigabeatf: "POWER = Mabalik"
     mrobe100: "DISPLAY = Mabalik"
     gigabeats: "BACK = Mabalik"
  </dest>
