--- a/apps/lang/thai.lang
+++ b/apps/lang/thai.lang
@@ -4133,7 +4133,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4144,7 +4144,7 @@
     ipod*,c200,sa9200: "MENU = ยกเลิก"
     x5,m5: "RECORD = ยกเลิก"
     h10,h10_5gb,e200*: "PREV = ยกเลิก"
-    gigabeatf: "A = ยกเลิก"
+    gigabeatf: "POWER = ยกเลิก"
     mrobe100: "DISPLAY = ยกเลิก"
     gigabeats: "BACK = ยกเลิก"
   </dest>
