Translation updates:  - Chinese (simplified and traditional) by Harry Tu (FS#10310).  - Danish by me.  - Japanese by Yoshihisa Uchida (FS#10301).  - Russian by Anton Veretenenko (FS#10297).  - Spanish by Francisco Vila (FS#10298).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21241 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/chinese-simp.lang
+++ b/apps/lang/chinese-simp.lang
@@ -1348,15 +1348,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Beep Volume"
+    swcodec: "Track Skip Beep"
   </source>
   <dest>
     *: none
-    swcodec: "哔声音量"
+    swcodec: "改歌的声音"
   </dest>
   <voice>
     *: none
-    swcodec: "哔声音量"
+    swcodec: "改歌的声音"
   </voice>
 </phrase>
 <phrase>
