--- a/apps/lang/japanese.lang
+++ b/apps/lang/japanese.lang
@@ -1926,15 +1926,15 @@
   user: core
   <source>
     *: none
-    swcodec: "Beep Volume"
+    swcodec: "Track Skip Beep"
   </source>
   <dest>
     *: none
-    swcodec: "ビープ音量"
+    swcodec: "スキップ時のビープ音量"
   </dest>
   <voice>
     *: none
-    swcodec: "ビープ音量"
+    swcodec: "スキップ時のビープ音量"
   </voice>
 </phrase>
 <phrase>
@@ -12334,5 +12334,70 @@
   <voice>
     *: none
     speaker: "スピーカの有効化"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_MODE
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Touchscreen Mode"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "タッチスクリーンの設定"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "タッチスクリーンの設定"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_GRID
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "3x3 Grid"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "縦横3個の格子"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "縦横 3 個の格子"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_POINT
+  desc: in Settings -> General -> System menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Absolute Point"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "絶対的な位置"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "絶対的な位置"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_PREVENT_SKIPPING
+  desc: in Settings -> Playback Settings
+  user: core
+  <source>
+    *: "Prevent Track Skipping"
+  </source>
+  <dest>
+    *: "スキップの禁止"
+  </dest>
+  <voice>
+    *: "スキップの禁止"
   </voice>
 </phrase>
