--- a/apps/lang/lietuviu.lang
+++ b/apps/lang/lietuviu.lang
@@ -4240,7 +4240,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4251,13 +4251,12 @@
     ipod*,c200,sa9200: "MENU = Atstatyti"
     x5,m5: "RECORD = Atstatyti"
     h10,h10_5gb,e200*: "PREV = Atstatyti"
-    gigabeatf: "A = Atstatyti"
+    gigabeatf: "POWER = Atstatyti"
     mrobe100: "DISPLAY = Atstatyti"
     gigabeats: "BACK = Atstatyti"
   </dest>
   <voice>
     *: none
-    rtc,h100,h120,h300,ipod*,e200*,c200,x5,m5,h10,h10_5gb,gigabeat*,mrobe100,sa9200: ""
   </voice>
 </phrase>
 <phrase>
@@ -8318,8 +8317,6 @@
     *: "Laikas"
   </voice>
 </phrase>
-/* TODO: cleanup LANG_USB_CHARGING unless HAVE_USB_CHARGING_ENABLE defined,
- * the selector should probably be usb_charging_enable as well. */
 <phrase>
   id: LANG_USB_CHARGING
   desc: in Battery menu
@@ -9541,7 +9538,7 @@
     *: ""
   </dest>
   <voice>
-    *: "kilobitai per sekundę
+    *: "kilobitai per sekundę"
   </voice>
 </phrase>
 <phrase>
