--- a/apps/lang/russian.lang
+++ b/apps/lang/russian.lang
@@ -4236,7 +4236,7 @@
     ipod*,c200,sa9200: "MENU = Revert"
     x5,m5: "RECORD = Revert"
     h10,h10_5gb,e200*: "PREV = Revert"
-    gigabeatf: "A = Revert"
+    gigabeatf: "POWER = Revert"
     mrobe100: "DISPLAY = Revert"
     gigabeats: "BACK = Revert"
   </source>
@@ -4247,20 +4247,12 @@
     ipod*,c200,sa9200: "МЕНЮ = Отмена"
     x5,m5: "ЗАПИСЬ = Отмена"
     h10,h10_5gb,e200*: "ПРЕД. = Отмена"
-    gigabeatf: "А = Отмена"
+    gigabeatf: "ВЫКЛ. = Отмена"
     mrobe100: "ПОКАЗ. = Отмена"
     gigabeats: "НАЗАД = Отмена"
   </dest>
   <voice>
     *: none
-    rtc: ""
-    h100,h120,h300: ""
-    ipod*,e200*,c200,sa9200: ""
-    x5,m5: ""
-    h10,h10_5gb: ""
-    gigabeatf: ""
-    mrobe100: ""
-    gigabeats: ""
   </voice>
 </phrase>
 <phrase>
