--- a/manual/configure_rockbox/sound_settings.tex
+++ b/manual/configure_rockbox/sound_settings.tex
@@ -421,3 +421,13 @@ and not easily noticable.
 Rockbox uses highpass triangular distribution noise as the dithering noise
 source, and a third order noise shaper.
 }
+
+\opt{swcodec}{
+\section{Timestretch}
+Enabling \setting{Timestretch} allows you to change the playback speed without it 
+affecting the pitch of the recording. 
+
+After enabling this feature and rebooting, you can access this via the \setting{Pitch Screen}. 
+This function is intended for speech playback and may significantly dilute your listening 
+experience with more complex audio.
+}
