Update Dutch langfile
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21285 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/nederlands.lang
+++ b/apps/lang/nederlands.lang
@@ -12398,3 +12398,37 @@
     *: "Voorkom nummers overslaan"
   </voice>
 </phrase>
+<phrase>
+  id: LANG_TIMESTRETCH
+  desc: timestretch enable
+  user: core
+  <source>
+    *: none
+    swcodec: "Timestretch"
+  </source>
+  <dest>
+    *: none
+    swcodec: "Afspeelsnelheid"
+  </dest>
+  <voice>
+    *: none
+    swcodec: "Afspeelsnelheid"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_SPEED
+  desc: timestretch speed
+  user: core
+  <source>
+    *: none
+    swcodec: "Speed"
+  </source>
+  <dest>
+    *: none
+    swcodec: "Snelheid"
+  </dest>
+  <voice>
+    *: none
+    swcodec: "Snelheid"
+  </voice>
+</phrase>
