Updated italian translation.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21322 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/italiano.lang
+++ b/apps/lang/italiano.lang
@@ -7974,11 +7974,11 @@
   </source>
   <dest>
     *: none
-    pitchscreen: "Velocità"
+    pitchscreen: "Tono e Velocità"
   </dest>
   <voice>
     *: none
-    pitchscreen: "Velocità"
+    pitchscreen: "Tono e Velocità"
   </voice>
 </phrase>
 <phrase>
@@ -12334,7 +12334,7 @@
 </phrase>
 <phrase>
   id: LANG_TOUCHSCREEN_MODE
-  desc: in Settings -> General -> System menu
+  desc: in Settings -> General -> Display -> Touchscreen Settings
   user: core
   <source>
     *: none
@@ -12351,7 +12351,7 @@
 </phrase>
 <phrase>
   id: LANG_TOUCHSCREEN_GRID
-  desc: in Settings -> General -> System menu
+  desc: in Settings -> General -> Display -> Touchscreen Settings
   user: core
   <source>
     *: none
@@ -12368,7 +12368,7 @@
 </phrase>
 <phrase>
   id: LANG_TOUCHSCREEN_POINT
-  desc: in Settings -> General -> System menu
+  desc: in Settings -> General -> Display -> Touchscreen Settings
   user: core
   <source>
     *: none
@@ -12395,5 +12395,90 @@
   </dest>
   <voice>
     *: "Previene Salto Traccia"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TIMESTRETCH
+  desc: timestretch enable
+  user: core
+  <source>
+    *: none
+    swcodec: "Timestretch"
+  </source>
+  <dest>
+    *: none
+    swcodec: "Timestretch"
+  </dest>
+  <voice>
+    *: none
+    swcodec: "Timestretch"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_SPEED
+  desc: timestretch speed
+  user: core
+  <source>
+    *: none
+    swcodec: "Speed"
+  </source>
+  <dest>
+    *: none
+    swcodec: "Velocità"
+  </dest>
+  <voice>
+    *: none
+    swcodec: "Velocità"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_SETTINGS
+  desc: in Settings -> General -> Display menu
+  user: core
+  <source>
+    *: none
+    touchscreen: "Touchscreen Settings"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Impostazioni Touchscreen"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Impostazioni Touchscreen"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_CALIBRATE
+  desc: in Settings -> General -> Display -> Touchscreen Settings
+  user: core
+  <source>
+    *: none
+    touchscreen: "Calibrate"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Calibra"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Calibra"
+  </voice>
+</phrase>
+<phrase>
+  id: LANG_TOUCHSCREEN_RESET_CALIBRATION
+  desc: in Settings -> General -> Display -> Touchscreen Settings
+  user: core
+  <source>
+    *: none
+    touchscreen: "Reset Calibration"
+  </source>
+  <dest>
+    *: none
+    touchscreen: "Ripristina Calibrazione"
+  </dest>
+  <voice>
+    *: none
+    touchscreen: "Ripristina Calibrazione"
   </voice>
 </phrase>
